@@ -50,6 +50,8 @@ sourceSets {
 }
 
 test {
+    jvmArgs '-ea', '-Xbootclasspath/p:../out/classes/production/boot', '-XX:+HeapDumpOnOutOfMemoryError', '-Xmx512m', '-XX:MaxPermSize=320m', '-Didea.system.path=../test-system', '-Didea.home.path=../', '-Didea.config.path=../test-config', '-Didea.test.group=ALL_EXCLUDE_DEFINED'
+    
     testLogging {
         events 'skipped', 'failed'
         exceptionFormat = 'full'
@@ -107,6 +109,14 @@ jacocoTestReport {
     reports {
         xml.enabled true
         html.enabled false
+    }
+    afterEvaluate {
+        classDirectories = files(classDirectories.files.collect {
+            fileTree(dir: it,
+                    exclude: ['gen/**',
+                                'graphdatabase/**',
+                              'grammars/**'])
+        })
     }
 }
 
